# hack-ai-06-2023

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  env-template
backend/: pyproject.toml
backend/alembic/versions/: 0161700250e4_file_update.py  737e1ed76fd8_bundle_update.py  b48a1cb7c15f_status.py  d271b55daf12_bundle_update.py  d3c691a384d6_similarity.py  ddd7dddfad69_bundles_and_files.py  f695b7657e72_feedback.py  ff36be93147d_file_update.py
backend/app/: celery_app.py
backend/app/api/: __init__.py  upload.py
backend/app/core/: config.py
backend/app/models/: __init__.py  bundle.py  files.py  remark.py
backend/app/schemas/: remark.py
frontend/: package.json
frontend/src/: App.tsx
frontend/src/components/Header/: Header.tsx
frontend/src/components/ResultTable/: ResultTable.tsx
frontend/src/pages/: Loading.tsx
